omitted new line removed

--- a/information/education.yml
+++ b/information/education.yml
@@ -4,12 +4,12 @@ education:
       start: 2023
       end: ongoing
       place: Université Grenoble Alpes (UGA)
-      result:
+      result: In progress.
       profiles:
         - all
     - title: B. Tech. - Software Engineering
-      start: 2023
-      end: ongoing
+      start: 2018
+      end: 2022
       place: St. Peterburg Electrotechnical University (ETU)
       result: Passed with **4.4** of **5.0** average score.
       profiles:
