--- a/information/education.yml
+++ b/information/education.yml
@@ -4,7 +4,7 @@ education:
       start: 2023
       end: ongoing
       place: Université Grenoble Alpes (UGA)
-      result: In progress.
+      result:
       profiles:
         - all
     - title: B. Tech. - Software Engineering
