--- a/information/achievements.yml
+++ b/information/achievements.yml
@@ -4,7 +4,7 @@ achievements:
       result: 7.5 out of 9 Band
       desc: A certificate of English language proficiency for non-native English language speakers (2018).
       profiles:
-        - all
+        - none
     - name: Cambridge Assessment Advanced
       result: C1 grade B
       desc: A certificate of English language proficiency for non-native English language speakers (2022).
