--- a/.github/workflows/curriculum_vitae.yml
+++ b/.github/workflows/curriculum_vitae.yml
@@ -9,6 +9,7 @@ on:
       - 'information/**'
       - 'curriculum_vitae/**'
       - '.github/workflows/curriculum_vitae.yml'
+      - 'Makefile'
 
 jobs:
   generate-cv:
@@ -22,22 +23,19 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
+      
+      - name: Pull LaTeX builder image
+        run: docker pull blang/latex
 
       - name: Install Dependencies
         run: make venv
 
-      - name: Build CV sources
-        run: make build-cv
-
-      - name: Build CV PDFs
-        uses: xu-cheng/latex-action@v3
-        with:
-          root_file: base.tex
-          working_directory: curriculum_vitae/sources
+      - name: Build CVs
+        run: make build-all
 
       - name: Save Artifact
         uses: actions/upload-artifact@v3
         with:
           name: CVs
-          path: curriculum_vitae/sources/base.pdf
+          path: curriculum_vitae/pdf/*.pdf
           retention-days: 3
