--- a/information/education.yml
+++ b/information/education.yml
@@ -2,7 +2,7 @@ education:
   items:
     - title: Ms. Sc. - Informatics
       start: 2023
-      end: ongoing
+      end: now
       place: Université Grenoble Alpes (UGA)
       result:
       profiles:
