--- a/.github/workflows/curriculum_vitae.yml
+++ b/.github/workflows/curriculum_vitae.yml
@@ -31,7 +31,7 @@ jobs:
         run: make venv
 
       - name: Build CVs 👤
-        run: make build-all
+        run: make build-all-cv
 
       - name: Update release 📩
         uses: svenstaro/upload-release-action@v2
