education institution fixed

--- a/information/education.yml
+++ b/information/education.yml
@@ -3,7 +3,7 @@ education:
     - title: Ms. Sc. - Informatics
       start: 2023
       end: now
-      place: Université Grenoble Alpes (UGA)
+      place: Université Grenoble Alpes / Grenoble INP - Ensimag
       result: \phantom
       profiles:
         - all
