--- a/information/skills.yml
+++ b/information/skills.yml
@@ -3,51 +3,31 @@ skills:
   items:
   - name: Git, Linux
     years: 3
-    profiles:
-      - frontend
-      - backend
-      - devops
+    profiles: ["frontend", "backend", "devops"]
   - name: Python
     years: 2
-    profiles:
-      - backend
-      - devops
+    profiles: ["backend", "devops"]
   - name: Kotlin, Java, Android
     years: 2
-    profiles:
-      - backend
-      - devops
+    profiles: ["backend", "devops"]
   - name: GitHub Actions, Make, Gradle, Bash
     years: 2
-    profiles:
-      - frontend
-      - backend
-      - devops
+    profiles: ["frontend", "backend", "devops"]
+  - name: C, C++, Qt
+    years: 2
+    profiles: ["backend", "devops"]
   - name: Dart, Flutter
     years: 1
-    profiles:
-      - frontend
-      - devops
+    profiles: ["backend", "devops"]
   - name: Docker, Compose
     years: 1
-    profiles:
-      - backend
-      - devops
+    profiles: ["backend", "devops"]
   - name: PostgreSQL, MongoDB
     years: 1
-    profiles:
-      - backend
-      - devops
+    profiles: ["backend", "devops"]
   - name: JS, TS, HTML, CSS
     years: 1
-    profiles:
-      - frontend
-      - devops
-  - name: C, C++, Qt
-    years: 1
-    profiles:
-      - backend
-      - devops
+    profiles: ["frontend", "devops"]
   - name: OpenGL
     years: 1
   - name: ML, Neural Networks
