--- a/information/extracurricular.yml
+++ b/information/extracurricular.yml
@@ -3,3 +3,4 @@ extracurricular:
   samsung: Samsung IT school, student, 2017.
   psychology: SPBSU Winter Psychology School Conference, participant, 2020.
   arctic: BEAC Youth Model Conference, participant, 2019.
+  seminar: Scientific and technical seminar, conducted by ETU MOEVM department, participant, 2022.
