--- a/information/contact.yml
+++ b/information/contact.yml
@@ -1,7 +1,7 @@
 contact:
   name: Aleksandr Sergeev
   nick: pseusys
-  email: alexander.sergeev@onmail.com
+  email: aleksandr.sergeev.dm@gmail.com
   github: https://github.com/pseusys
   linkedin: https://www.linkedin.com/in/pseusys/
   telegram: https://t.me/pseusys
