--- a/information/education.yml
+++ b/information/education.yml
@@ -20,4 +20,4 @@ education:
       place: St. Peterburg Classical Gymnasium \#610
       result: Passed with **4.8** of **5.0** average score.
       profiles:
-        - all
+        - none
