--- a/information/events.yml
+++ b/information/events.yml
@@ -1,5 +1,5 @@
 events:
   items:
     - name: Academic exchange with HKUST
-      date: Sept 2024 - Jan 2025
-      description: Has taken part in academic exchange with HKUST school of science
+      date: Sept '24 - Jan '25
+      description: Has taken part in academic exchange with Hong Kong University of Science and Technology school of science
