--- a/information/events.yml
+++ b/information/events.yml
@@ -3,3 +3,5 @@ events:
     - name: Academic exchange with HKUST
       date: Sept '24 - Jan '25
       description: Has taken part in academic exchange with Hong Kong University of Science and Technology school of science
+      profiles:
+        - all
