none profile removed

--- a/information/contact.yml
+++ b/information/contact.yml
@@ -7,3 +7,4 @@ contact:
   telegram: https://t.me/pseusys
   phone: "+33749008333"
   title: Master of Science Student
+  repo: https://github.com/pseusys/pseusys/tree/source
