--- a/information/extracurricular.yml
+++ b/information/extracurricular.yml
@@ -2,26 +2,26 @@ extracurricular:
   items:
     - name: ECCL Vestibulum
       date: 2014
-      description: Latin language certification, passed with silver grade
+      description: Latin language certification, passed with silver grade.
       profiles:
         - none
     - name: Samsung IT school
-      description: Studied app development Android framework in Samsung IT school
+      description: Studied app development Android framework in Samsung IT school.
       date: 2017
       profiles:
         - none
     - name: SPBSU Winter Psychology School Conference
-      description: Participated in psychology school conference as a listener
+      description: Participated in psychology school conference as a listener.
       date: 2020
       profiles:
         - none
     - name: BEAC Youth Model Conference
-      description: Participated in BEAC Youth Model Conference with a presentation
+      description: Participated in BEAC Youth Model Conference with a presentation.
       date: 2019
       profiles:
         - none
     - name: Scientific and technical seminar
-      description: Participated in seminar conducted by ETU MOEVM department with a presentation of my project (HogweedGO)
+      description: Participated in seminar conducted by ETU MOEVM department with a presentation of my project ([HogweedGO](https://github.com/pseusys/HogweedGo)).
       date: 2022
       profiles:
         - none
