--- a/information/work.yml
+++ b/information/work.yml
@@ -2,36 +2,34 @@ work:
   items:
     - job: Backend Developing Intern
       place: Ansys - Lyon, France
-      resp: Enhancing simulation framework by introducing code generation.
+      resp: |
+        + Was part of a team responsible for data storage and transfer optimization between different parts of [AnsysDPF](https://dpf.docs.pyansys.com) infrastructure.
+        + Proposed and implemented code generation design; internal data structures have been wrapped with consistent and schema-based generated user interfaces.
+        + As a result, codebase maintenance needs were reduced, codestyle and documentation coverage increased and further development sped up significantly.
       start: Feb '25
       end: Aug '25
-      profiles:
-        - all
+      profiles: ["backend", "frontend"]
     - job: Full Stack Intern
       place: Amadeus - Nice, France
       resp: Mutation testing for large-scale C++ project and test set development.
       start: Feb '24
       end: Aug '24
-      profiles:
-        - all
+      profiles: ["fullstack"]
     - job: Robotics Intern
       place: Grenoble Computer Science Laboratory - LIGLAB
       resp: Comparing, researching and developing person detection with LiDAR algorithms.
       start: Jun '23
       end: Aug '23
-      profiles:
-        - all
+      profiles: ["backend", "fullstack"]
     - job: Software Engineer
       place: DeepPavlov.ai
       resp: Developing neural network model wrappers, CI/CD, automated testing, scripting, documentation website.
       start: May '22
       end: Jan '25
-      profiles:
-        - all
+      profiles: ["all"]
     - job: Full Stack Intern
       place: Seventest ntts - St. Peterburg, Russia
       resp: Website backend developing (PHP + Drupal, MySQL), network testing and traffic analysis.
       start: Jun '21
       end: Aug '21
-      profiles:
-        - none
+      profiles: ["frontend"]
