work experiences made verbose

--- a/information/certifications.yml
+++ b/information/certifications.yml
@@ -3,10 +3,8 @@ certifications:
     - name: IELTS
       result: 7.5 out of 9 Band
       desc: A certificate of English language proficiency for non-native English language speakers (2018).
-      profiles:
-        - none
+      profiles: ["none"]
     - name: Cambridge Assessment Advanced
       result: C1 grade B
       desc: A certificate of English language proficiency for non-native English language speakers (2022).
-      profiles:
-        - all
+      profiles: ["all"]
