--- a/information/education.yml
+++ b/information/education.yml
@@ -5,19 +5,16 @@ education:
       end: now
       place: Université Grenoble Alpes / Grenoble INP - Ensimag
       result: In progress...
-      profiles:
-        - all
+      profiles: ["all"]
     - title: B. Tech. - Software Engineering
       start: 2018
       end: 2022
       place: St. Peterburg Electrotechnical University (ETU)
       result: Passed with **4.4** of **5.0** average score.
-      profiles:
-        - all
+      profiles: ["all"]
     - title: High school
       start: 2011
       end: 2018
       place: St. Peterburg Classical Gymnasium \#610
       result: Passed with **4.8** of **5.0** average score.
-      profiles:
-        - none
+      profiles: ["none"]
