--- a/information/education.yml
+++ b/information/education.yml
@@ -4,7 +4,7 @@ education:
       start: 2023
       end: now
       place: Université Grenoble Alpes / Grenoble INP - Ensimag
-      result: In progress...
+      result:
       profiles: ["all"]
     - title: B. Tech. - Software Engineering
       start: 2018
