--- a/information/certifications.yml
+++ b/information/certifications.yml
@@ -4,7 +4,7 @@ certifications:
       result: 7.5 out of 9 Band
       desc: A certificate of English language proficiency for non-native English language speakers (2018).
       profiles: ["none"]
-    - name: Cambridge Assessment Advanced
+    - name: Cambridge Advanced
       result: C1 grade B
       desc: A certificate of English language proficiency for non-native English language speakers (2022).
       profiles: ["all"]
