all texts formatted

--- a/information/events.yml
+++ b/information/events.yml
@@ -4,6 +4,6 @@ events:
     - name: Academic exchange with HKUST
       date: Sept '24 - Jan '25
       description: |
-        - Has taken part in academic exchange with Hong Kong University of Science and Technology school of science.
-        - Curriculum included advanced topics of cybersecurity, internet protocols and machine learning.
+        - Took part in academic exchange with the Hong Kong University of Science and Technology School of Science.
+        - Curriculum included advanced topics in cybersecurity, internet protocols, and machine learning.
       profiles: ["all"]
