--- a/information/education.yml
+++ b/information/education.yml
@@ -2,9 +2,9 @@ education:
   items:
     - title: Ms. Sc. - Informatics
       start: 2023
-      end: now
+      end: 2025
       place: Université Grenoble Alpes / Grenoble INP - Ensimag
-      result: \phantom
+      result: Certificate not yet issued.
       profiles:
         - all
     - title: B. Tech. - Software Engineering
