Events removed from main CV

--- a/information/events.yml
+++ b/information/events.yml
@@ -6,4 +6,4 @@ events:
       description: |
         - Took part in academic exchange with the Hong Kong University of Science and Technology School of Science.
         - Curriculum included advanced topics in cybersecurity, internet protocols, and machine learning.
-      profiles: ["all"]
+      profiles: ["none"]
